# dataparsers

./: .gitignore  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
docs/: .gitignore  requirements.txt
docs/source/: 1_user_manual.md  2_available_functions.md  3_features.md  conf.py  dataparsers.py  index.md  process_module.py  process_readme.py  process_text.py  replace_snippets.py  tables.md
docs/source/_static/css/: custom.css
docs/sphinx/source/: 1_user_manual.md  3_features.md  conf.py  dataparsers.py  index.md  process_module.py  process_readme.py
examples/: example.py  example_with_future.py
src/: dataparsers.py  dataparsers.pyi
src/dataparsers/: __init__.md  __init__.pyi  dataparsers.py
tests/: test_argparse_examples.py  test_dataparsers.py
