[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataparsers"
version = "2.3.5"
description = "A wrapper around argparse to get command line argument parsers from dataclasses"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = { text = "MIT" }
authors = [
    { name = "Diogo Rossi", email = "rossi.diogo@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Documentation = "https://dataparsers.readthedocs.io/en/latest/"
Source = "https://github.com/diogo-rossi/dataparsers.git"
Issues = "https://github.com/diogo-rossi/dataparsers/issues"

[project.optional-dependencies]
docs = [
    "sphinx>=8.1.3",
    "myst-parser>=4.0.0",
    "furo>=2024.8.6",
    "sphinx-copybutton>=0.5.2",
    "sphinxnotes-comboroles>=1.0",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "pytest>=8.3.4",
    "sphinx>=8.1.3",
    "myst-parser>=4.0.0",
    "furo>=2024.8.6",
    "sphinx-copybutton>=0.5.2",
    "sphinxnotes-comboroles>=1.0",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.18.2",
    "mkdocs-material>=9.6.22",
]

[tool.taskipy.tasks]
docs = { cmd = "make html", cwd = "./docs/sphinx", help = "Make docs" }
open = { cmd = "index.html", cwd = "./docs/sphinx/build/html", help = "Open docs" }
test = { cmd = "pytest", cwd = "./tests", help = "Test with pytest" }

[tool.pytest.ini_options]
addopts = "-rx -vv -s --tb=short"
